--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
+            android:resizeableActivity="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.FitnessTracker">
             <intent-filter>
